<resources>
    <string name="request_timeout">Ooops&#8230; permintaan habis waktu</string>
    <string name="check_network">Ooops&#8230; tidak dapat konek ke server.\nTolong cek internet Anda</string>
    <string name="network_disconnected">Ooops&#8230; koneksi terputus</string>
    <string name="network_unknown_host">Ooops&#8230; koneksi terputus</string>
    <string name="error_http">Ooops&#8230; %1$d %2$s, Sedang dalam perbaikan, mohon maaf atas ketidaknyamanan Anda.</string>
    <string name="host_not_found">Ooops&#8230; Alamat %1$s tidak ditemukan</string>
    <string name="cari_dokter">Cari Dokter</string>
    <string name="cari_klinik">Cari Klinik</string>
    <string name="oppps_coba_lagi">Oppps!!! Coba lagi</string>
    <string name="filter_doctor">Filter Dokter</string>
    <string name="apply">Terapkan</string>
    <string name="reset">Reset</string>
    <string name="confirm">Konfirmasi</string>
    <string name="tb">TB</string>
    <string name="bb">BB</string>
    <string name="umur">Umur</string>
    <string name="ubah">Ubah</string>
    <string name="fasilitas_layanan">Fasilitas Layanan</string>
    <string name="jawaban_baru">Jawaban Baru</string>
    <string name="download_resep">Download Resep</string>
    <string name="connecting_socket">Sedang menghubungkan ke Socket</string>
    <string name="daftar_user_ke_socket">Mendaftarkan user</string>
    <string name="cari_obat">Cari Obat</string>
    <string name="app_location_permissions">This app needs location permission</string>
    <string name="tambah_obat">Tambah Obat</string>
    <string name="strip">-</string>
    <string name="content_desc">Content Desc</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="kode_promo_berhasil_di_pakai_kamu_menghemat_rp_10_000">Kode promo berhasil di pakai, kamu menghemat Rp 10.000</string>
    <string name="biaya">Biaya</string>
    <string name="potongan">Potongan&#160;</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="masukan_kode_voucher">Masukan kode voucher</string>
    <string name="gunakan">Gunakan</string>
    <string name="menghemat">Kode promo berhasil dipakai, Anda menghemat&#160;</string>
    <string name="pilih_jenis_pembayaran">Pilih jenis pembayaran</string>
    <string name="metode_pembayaran_lainnya">Metode pembayaran lainnya</string>
    <string name="saldo_tidak_cukup">Saldo anda tidak cukup, isi ulang saldo</string>
    <string name="saldo_tidak_cukup_">isi ulang saldo</string>
    <string name="dompet_saya">Dompet Saya</string>
    <string name="saldo_saya">Saldo saya</string>
    <string name="form_konsultasi">Form Konsultasi</string>
    <string name="wajib_diisi">Wajib diisi</string>
    <string name="apa_yang_ada_rasakan">Apa yang ada rasakan?</string>
    <string name="promo_dan_ringkasan_biaya">Promo &amp; Ringkasan Biaya</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="dokter_kami_akan_siap">Dokter kami akan siap</string>
    <string name="silahkan_tunggu">Silahkan Tunggu</string>
    <string name="dalam_00_40_detik">dalam 00:40 detik</string>
    <string name="batal_konsultasi_">Anda yakin akan membatalkan konsultasi?</string>
    <string name="batal_konsultasi">Batal Konsultasi</string>
    <string name="tidak_ada_response">Maaf belum ada response dari dokter,</string>
    <string name="hubungi_dokter_lain">silahkan menghubungin dokter lain</string>
    <string name="dalam">dalam</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="kembali">Kembali</string>
    <string name="batal">Batal</string>
    <string name="history_form_jawaban_desc">Anda telah mengisi form konsultasi sebelumnya.</string>
    <string name="history_form_jawaban_ket">Jika jawaban saat ini berbeda dengan sebelumnya, silahkan pilih "Jawaban Baru"</string>
    <string name="required">harus dijawab</string>
    <string name="pertanyaan_ini_harus_diisi">Pertanyaan ini harus diisi</string>
    <string name="orther_required">Jika lainnya dipilih, harus dijawab</string>
    <string name="tampilkan_jawaban">Tampilkan Jawaban</string>
    <string name="jawaban">Jawaban</string>
    <string name="keluhan">Keluhan</string>
    <string name="ketik_pesan">Ketik Pesan</string>
    <string name="teruskan">Teruskan</string>
    <string name="upload_ulang">Upload ulang</string>
    <string name="resep_obat_digital">Resep Obat Digital</string>
    <string name="detail">klik untuk detail</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="jumlah">Jumlah</string>
    <string name="resep_ini_berlaku_sampai">Resep ini berlaku sampai</string>
    <string name="ingatkan_saya">Ingatkan saya</string>
    <string name="diagnosa_dari_dokter">Diagnosa dari Dokter</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="symptoms">Symptoms</string>
    <string name="posible_diagnosis">Possible Diagnosis</string>
    <string name="icd">ICD (International Classification of Diseases)</string>
    <string name="advice">Advice</string>
    <string name="chat_lagi_pada">Chat lagi pada</string>
    <string name="pesan_dokter">Pesan dokter</string>
    <string name="apakah_dokter_boleh_melihat_informasi_kesehatan_anda">Apakah dokter boleh melihat Informasi kesehatan Anda?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="char_note_count">%1$d/%2$d chars</string>
    <string name="feedback_konsultasi">Feedback Konsultasi</string>
    <string name="feedback_desc">Terima kasih telah konsultasikan kesehatanmu di Transmedika, berikan feedback guna meningkatkan pelayanan dalam kesehatan anda.</string>
    <string name="mudah_cepat">Mudah dan cepat</string>
    <string name="dokter_profesional">Dokter Profesional</string>
    <string name="biaya_terjangkau">Biaya terjangkau</string>
    <string name="tambahkan_sebagai_dokter_favorit">Tambahkan sebagai dokter favorit</string>
    <string name="komentar">Komentar</string>
    <string name="try_connect_server_chat">Mencoba terhubung ke server chat…</string>
    <string name="disconnected">Koneksi Terputus</string>
    <string name="dua_param_string">%1$s&#160;%2$s</string>
    <string name="anda_telah_memberi_izin">Anda telah memberi izin</string>
    <string name="anda_telah_menolak">Anda telah menolak</string>
    <string name="uploading">Uploading</string>
    <string name="gagal_upload">Gagal Upload</string>
    <string name="tidak_ada_aplikasi_buka_file">Tidak ada aplikasi yang dapat membuka file ini</string>
    <string name="keluar_conversations">Keluar dari percakapan</string>
    <string name="akhiri_conversations">Anda yakin akan mengakhiri konsultasi?</string>
    <string name="kembali_online">Kembali online</string>
    <string name="tidak_ada_koneksi">Tidak ada koneksi</string>
    <string name="feedback_success">Sukses memberikan feedback</string>
    <string name="selesai">Selesai</string>
    <string name="video_call">Video Call</string>
    <string name="menu">Menu Lainnya</string>
    <string name="symtoms">Symtoms</string>
    <string name="possible_diagnose">Possible Diagnose</string>
    <string name="catatan_dokter">Catatan Dokter</string>
    <string name="catatan">Catatan</string>
    <string name="error_http_2">Gagal Upload&#8230; %1$d %2$s</string>
    <string name="data_pasien">Data Pasien</string>
    <string name="beli_sekarang">Beli Sekarang</string>
    <string name="waktu">Waktu:</string>
    <string name="perbaharui_keranjang">Perbaharui Keranjang</string>
    <string name="perbaharui_keranjang_ask">Keranjang Anda akan diperbaharui. Anda menyetujuinya?</string>
    <string name="resep_obat">Resep Obat</string>
    <string name="perbaharui">Perbaharui</string>
    <string name="requires_camera_audio_record_access">Membutuhkan akses camera dan perekam suara</string>
    <string name="berdering">Berdering&#8230;</string>
    <string name="memanggil">Memanggil&#8230;</string>
    <string name="tutup">Tutup</string>
    <string name="panggilan_video_masuk">Panggilan video masuk</string>
    <string name="sedang_menghubungkan">Sedang menghubungkan</string>
    <string name="mencoba_terhubung_ke_socket">Mencoba terhubung ke socket</string>
    <string name="membuat_sesi">Membuat sesi</string>
    <string name="gagal_membuat_sesi">Gagal membuat sesi</string>
    <string name="menolak_panggilan">Menolak panggilan Anda</string>
    <string name="kategori_obat">Kategori Obat</string>
    <string name="pesan">Pesan</string>
    <string name="tambah">Tambah</string>
    <string name="minimal_cari">Minimal 3 karakter untuk pencarian</string>
    <string name="lokasi_gambar_tidak_ditemukan">Lokasi gambar tidak ditemukan</string>
    <string name="estimasi">Estimasi&#160;</string>
    <string name="setting_change_unavailable">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="selamat_transaksi_berhasil">Selamat! Transaksi Anda Berhasil</string>
    <string name="total_harga">Total Harga&#160;</string>
    <string name="detail_obat">Detail Obat</string>
    <string name="unggah_resep">Unggah Resep</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="ganti_alamat">Ganti Alamat</string>
    <string name="pilih_kurir_pengiriman">Pilih Kurir Pengiriman</string>
    <string name="tidak_tersedia">Tidak tersedia</string>
    <string name="alamat_anda">Alamat anda</string>
    <string name="catatan_anda">Catatan anda</string>
    <string name="izin_camera_strorage_1">Aplikasi mebutuhkan izin akses kamera dan baca tulis ke penyimpanan</string>
    <string name="stok">Stok&#160;</string>
    <string name="resep_sudah_pernah_dibeli">Resep sudah pernah dibeli</string>
    <string name="detail_pembelian">Detail Pembelian</string>
    <string name="alamat">Alamat</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="terapkan">Terapkan</string>
    <string name="hapus_alamat">Hapus Alamat</string>
    <string name="hapus_alamat_ask">Anda yakin akan menghapus data alamat Anda?</string>
    <string name="hapus">Hapus</string>
    <string name="data_tidak_ditemukan">Oops! data tidak ditemukan</string>
    <string name="finding_location">Sedang mencari lokasi Anda&#8230;</string>
    <string name="alamat_lain">Alamat Lain</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="alamat_kantor">Alamat Kantor</string>
    <string name="gps_tidak_ditemukan">Lokasi GPS belum ditemukan</string>
    <string name="cari_lokasi">Cari lokasi</string>
    <string name="alamat_tidak_ditemuakn">Alamat tidak ditemukan</string>
    <string name="ubah_alamat">Ubah Alamat</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="tidak_ada_data_yang_ditampilkan">Tidak ada data yang ditampilkan</string>
    <string name="lupa_password">Lupa Kata Sandi</string>
    <string name="lupa_pin">Lupa Pin</string>
    <string name="pin_sebelumnya">Pin Sebelumnya</string>
    <string name="silahkan_masukan_pin_anda">Silahkan masukan Pin anda</string>
    <string name="pin">Pin</string>
    <string name="gunakan_kombinasi_angka">Gunakan kombinasi angka</string>
    <string name="simpan">Simpan</string>
    <string name="kata_sandi_baru">Kata sandi baru</string>
    <string name="kata_sandi_sebelumnya">Kata sandi sebelumnya</string>
    <string name="gunakan_kombinasi_huruf">Gunakan kombinasi huruf besar dan kecil serta angka dan min 8 karakter</string>
    <string name="kata_sandi_baru_konfirm">Tulis kembali kata sandi baru</string>
    <string name="email">Email</string>
    <string name="kirim">Kirim</string>
    <string name="remember_password">Ingat Kata Sandi?</string>
    <string name="forgot_password_desc">Silahkan masukan alamat email anda yang telah terdaftar. Kami akan mengirim anda link untuk mengatur ulang kata sandi.</string>
    <string name="reset_password">Atur Ulang Kata Sandi</string>
</resources>