<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.transmedika.transmedikakitui.widget.PinView
        android:id="@+id/pin_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:title="@string/pin_sebelumnya"
        app:showHideIconVisibility="visible"/>

    <RelativeLayout
        android:id="@+id/rl_confirm_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="horizontal">

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_label_input_pin"
            android:textSize="@dimen/x_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/gray2"
            android:text="@string/silahkan_masukan_pin_anda" />

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/forgot_pin"
            android:textSize="@dimen/x_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:text="@string/lupa_pin"
            tools:ignore="RelativeOverlap" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/line_light"
            android:layout_below="@id/forgot_pin"/>

    </RelativeLayout>

    <com.transmedika.transmedikakitui.widget.PinView
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:title="@string/pin"
        app:showHideIconVisibility="visible"/>

    <com.transmedika.transmedikakitui.widget.NetkromTextView
        android:id="@+id/tv_ket"
        android:textSize="@dimen/xx_small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/gray2"
        android:text="@string/gunakan_kombinasi_angka" />

    <com.transmedika.transmedikakitui.widget.PinView
        android:id="@+id/pin_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_margin="4dp"
        android:padding="4dp"
        app:title="Konfirmasi Pin"
        app:showHideIconVisibility="visible"/>

    <com.transmedika.transmedikakitui.widget.NetkromButton
        android:id="@+id/btn_simpan"
        style="@style/ButtonSubmit"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/simpan"
        android:enabled="false" />

</LinearLayout>