<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/img_waiting_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_desc"
            app:srcCompat="@drawable/intro_v1"/>
        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/silahkan_tunggu"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal"/>
        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_dokter_siap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/small_text"
            android:text="@string/dokter_kami_akan_siap"
            android:textStyle="normal"/>
        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/small_text"
            android:text="@string/dalam_00_40_detik"
            android:textStyle="normal"/>
        <com.transmedika.transmedikakitui.widget.NetkromButton
            android:id="@+id/btn_batal"
            android:minWidth="190dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_rounded_visible"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="center"
            android:paddingStart="15dp"
            android:textColor="#D4D4D4"
            android:paddingEnd="15dp"
            android:text="@string/batal_konsultasi"/>
    </LinearLayout>
</RelativeLayout>



