<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_password"
            android:textSize="@dimen/small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/kata_sandi_sebelumnya"
            android:textColor="@color/textTitle" />

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/forgot_password"
            android:textSize="@dimen/x_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/lupa_password"
            android:textColor="@color/black" />
    </RelativeLayout>

    <com.transmedika.transmedikakitui.widget.ShowHidePasswordEditText
        android:id="@+id/ed_password"
        android:textSize="@dimen/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ed_normal"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/textDefault" />

    <com.transmedika.transmedikakitui.widget.NetkromTextView
        android:id="@+id/tv_new_password"
        android:textSize="@dimen/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/kata_sandi_baru"
        android:textColor="@color/textTitle" />

    <com.transmedika.transmedikakitui.widget.ShowHidePasswordEditText
        android:id="@+id/ed_password_new"
        android:textSize="@dimen/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ed_normal"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/textDefault" />

    <com.transmedika.transmedikakitui.widget.NetkromTextView
        android:id="@+id/tv_ket"
        android:textSize="@dimen/xx_small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/gunakan_kombinasi_huruf"
        android:textColor="@color/gray2" />

    <com.transmedika.transmedikakitui.widget.NetkromTextView
        android:id="@+id/tv_new_password_konfirm"
        android:textSize="@dimen/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/kata_sandi_baru_konfirm"
        android:textColor="@color/textTitle" />

    <com.transmedika.transmedikakitui.widget.ShowHidePasswordEditText
        android:id="@+id/ed_password_new_konfirm"
        android:textSize="@dimen/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ed_normal"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/textDefault" />


    <com.transmedika.transmedikakitui.widget.NetkromButton
        android:id="@+id/btn_simpan"
        style="@style/ButtonSubmit"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:enabled="false"
        android:text="@string/simpan" />


</LinearLayout>