<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_desc"
            android:textSize="@dimen/small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_desc"
            android:textColor="@color/textDefault"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_title" />

        <com.transmedika.transmedikakitui.widget.NetkromEditText
            android:id="@+id/ed_email"
            android:textSize="@dimen/small_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ed_normal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/textDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <ProgressBar
            android:id="@+id/pb_validasi"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/ed_email"
            app:layout_constraintEnd_toEndOf="@id/ed_email"
            app:layout_constraintTop_toTopOf="@+id/ed_email"
            tools:visibility="visible" />

        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_remember"
            android:textSize="@dimen/small_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/remember_password"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.transmedika.transmedikakitui.widget.NetkromButton
        android:id="@+id/btn_send"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_primary_enabled_stat"
        android:enabled="false"
        android:text="@string/kirim"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>