<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_filter">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textDefault"
            android:textSize="@dimen/small_text"
            android:gravity="center"
            android:paddingTop="7.5dp"
            android:paddingBottom="7.5dp"
            android:text="@string/filter_doctor"/>
        <ImageView
            android:id="@+id/img_close"
            android:contentDescription="@string/content_desc"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_close_filter"/>
    </RelativeLayout>
    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:background="@drawable/actionbar_shadow"
        android:layout_gravity="bottom"
        android:layout_height="2dp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
        <com.transmedika.transmedikakitui.widget.NetkromButton
            android:id="@+id/btn_batal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:textAllCaps="false"
            android:textSize="@dimen/x_small_text"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/gray"
            android:background="@drawable/btn_rec_disable"
            android:text="@string/reset"/>
        <com.transmedika.transmedikakitui.widget.NetkromButton
            android:id="@+id/btn_ya"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginStart="5dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/btn_rec"
            android:textSize="@dimen/x_small_text"
            android:text="@string/apply"/>
    </LinearLayout>
</LinearLayout>