<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:contentPaddingRight="10dp"
    app:contentPaddingLeft="10dp"
    app:contentPaddingTop="16dp"
    app:contentPaddingBottom="16dp"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/root_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text"
            android:textColor="@color/textTitle"
            android:visibility="visible"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/disconnected"/>
        <com.airbnb.lottie.LottieAnimationView
            android:contentDescription="@string/content_desc"
            android:id="@+id/img"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="visible"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_server_down"/>
        <com.transmedika.transmedikakitui.widget.NetkromTextView
            android:id="@+id/tv_sub_title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/small_text"
            android:textColor="@color/textDefault"
            android:gravity="center"
            android:text="@string/try_connect_server_chat"/>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
